--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -274,6 +274,12 @@ div.gallery img {
 }
 
 div.desc {
-  padding: 15px;
+	font-size: 12px;
+  padding: 7px;
   text-align: center;
+}
+
+div.self-introduce {
+	font-size: 14px;
+
 }
