--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,9 +9,9 @@
     {% if site.twitter_username %}
     <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
     {% endif %}
-    {% for link in site.profile_links %}
-    <a href="{{ link | last }}">{{ link | first }}</a>
-    {% endfor %}
+    <!--{% for link in site.profile_links %}-->
+    <!--<a href="{{ link | last }}">{{ link | first }}</a>-->
+    <!--{% endfor %}-->
   </p>
 </div>
 
