--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,9 @@
     {% if site.twitter_username %}
     <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
     {% endif %}
+    {% if site.email_address %}
+    <a href="mailto:{{ site.email_address }}">Email</a>
+    {% endif %}
     <!--{% for link in site.profile_links %}-->
     <!--<a href="{{ link | last }}">{{ link | first }}</a>-->
     <!--{% endfor %}-->
