--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -262,24 +262,22 @@ div.gallery {
   border: 1px solid #ccc;
   float: left;
   width: 180px;
-}
 
-div.gallery:hover {
-  border: 1px solid #777;
-}
+  &:hover {
+	border: 1px solid #777;
+  }
+  img {
+	width: 100%;
+	height: 135px;
+  }
 
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
+  desc {
 	font-size: 12px;
-  padding: 7px;
-  text-align: center;
+	padding: 7px;
+	text-align: center;
+  }
 }
 
 div.self-introduce {
 	font-size: 14px;
-
 }
